--- a/class_streamlit.html
+++ b/class_streamlit.html
@@ -20,9 +20,9 @@
       mount(
         {
           requirements: ["matplotlib"], // Packages to install
-          entrypoint: "streamlit_app.py", // The target file of the `streamlit run` command
+          entrypoint: "class_streamlit.py", // The target file of the `streamlit run` command
           files: {
-            "streamlit_app.py": `
+            "class_streamlit.py": `
 import streamlit as st
 import matplotlib.pyplot as plt
 import numpy as np
