Add instructions and make launching from url possible via pyiodide.

--- a/class_streamlit.html
+++ b/class_streamlit.html
@@ -34,7 +34,7 @@
         mount(
           {
             streamlitConfig: {
-              "client.toolbarMode": "viewer",
+              // "client.toolbarMode": "viewer",
               "theme.baseFontSize": 14,
             },
             requirements: ["plotly"],
