--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             streamlitConfig: {
               "client.toolbarMode": "minimal",
               "theme.baseFontSize": 14,
+              "browser.toolbarMode": "auto",
             },
             requirements: ["plotly"],
             entrypoint: "class_streamlit.py",
